# pylaunches

./: .devcontainer.json  .gitignore  .travis.yml  README.md  example.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: actions.yml  release.yml  test.yml
pylaunches/: __init__.py  api.py  common.py  const.py  error.py  exceptions.py  types.py
pylaunches/objects/: data.py  event.py  launch.py  starship.py
scripts/: set-version
tests/: common.py  test_api_client.py  test_event.py  test_event_previous.py  test_event_upcoming.py  test_get_starship.py  test_get_upcoming.py
tests/fixtures/: event.json  starship.json  upcoming.json
