[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "pylaunches"
version = "0"
description = ""
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Ludeeus", email = "ludeeus@ludeeus.dev"}
]
maintainers = [
  {name = "Ludeeus", email = "ludeeus@ludeeus.dev"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.6",
]

[project.urls]
Repository = "https://github.com/ludeeus/pylaunches"

[dependency-groups]
dev = [
  "aresponses==3.0.0",
  "black==25.12.0",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pylaunches"]
